--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             </h3>
         </aside>
         <div class="widget-1">
-            <h3>Aeronaves</h3>
+           <a href="Aeronaves.html"><h3>Aeronaves</h3></a>
         </div>
         <div class="widget-2">
-            <h3>Automoviles</h3>
+            <a href="Automoviles.html"><h3>Automoviles</h3></a>
         </div>
         <footer class="footer">
-            <h3>Acerca de Nosotros</h3>
+            <a href="contacto.html"><h3>Acerca de Nosostros</h3></a>
         </footer>
     </div>
 </body>
