--- a/contacto.html
+++ b/contacto.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- Enlace al ícono (favicon) -->
     <link rel="icon" href="images/form_icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <body style =" Background-color: rgb(205, 247, 193);">
-    
+
     <div class="container mt-5">
         <h1 class="display-4 text-center" >  <strong> Contacto </strong>  </h1>
 
