--- a/contacto.html
+++ b/contacto.html
@@ -9,14 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- Enlace al ícono (favicon) -->
     <link rel="icon" href="images/form_icon.ico" type="image/x-icon">
+    <!-- background -->
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <!-- Agregar estilos para la animación -->
-    <style>
-        /* Estilos para el modal de carga */
-        .modal-backdrop.show {
-            opacity: 0.5;
-        }
-    </style>
+    <!-- Mostrar un modal de carga -->
+    <link rel="stylesheet" type="text/css" href="css/modal-carga.css">
+    <!-- Script para limpiar formulario -->
+    <script src="javascript/limpiar-formulario.js"></script>
 </head>
 <body>
     <div class="container mt-5">
@@ -51,39 +49,19 @@
     </div>
 
     <!-- Modal de carga -->
-    <div class="modal fade" id="modalCarga" tabindex="-1" aria-labelledby="modalCargaLabel" aria-hidden="true">
+    <div class="modal" id="modalCarga">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body text-center">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="sr-only">Cargando...</span>
-                    </div>
+                    <div class="spinner"></div>
                     <p class="mt-2">Enviando formulario...</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Scripts de Bootstrap (jQuery y Popper.js) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.9.4/dist/umd/popper.min.js"></script>
-
-    <!-- Script para limpiar el formulario -->
-    <script>
-        function limpiarFormulario() {
-            document.getElementById("nombre").value = "";
-            document.getElementById("email").value = "";
-            document.getElementById("mensaje").value = "";
-        }
-    </script>
-
-    <!-- Script para mostrar el modal de carga al enviar el formulario -->
-    <script>
-        document.getElementById("miFormulario").addEventListener("submit", function () {
-            $('#modalCarga').modal('show'); // Muestra el modal de carga
-        });
-    </script>
-
+    <script src="javascript/mostrar-modal-carga.js"></script>
+    
     <!-- Footer -->
     <footer class="text-center mt-5">
         <p>&copy; 2023 Modelos de Historia</p>
