--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="Automoviles.html"><h3>Automoviles</h3></a>
         </div>
         <footer class="footer">
-            <a href="contacto.html"><h3>Acerca de Nosostros</h3></a>
+            <a href="contacto.html" target="_blank"><h3>Acerca de Nosotros</h3></a>
         </footer>
     </div>
 </body>
