--- a/contacto.html
+++ b/contacto.html
@@ -28,6 +28,7 @@
                 </ul>
             </nav>
         </header>
+    </div>
         <br>
         <br>
         <br>
@@ -72,7 +73,8 @@
     </div>
 </div>
 <script src="javascript/mostrar-modal-carga.js"></script> 
- 
+    <br>
+    <br>
     <!-- Footer -->
     <footer class="text-center mt-5">
         <img src="images/logo.png" alt="" width="300" height="200">
